<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pantallasgenerales"
    tools:context=".PerfilActivity">

    <TextView
        android:id="@+id/tvPerfilTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/user_profile_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_edit"
        app:tint="@android:color/white"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/editar_perfil"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="@id/tvPerfilTitulo"
        app:layout_constraintBottom_toBottomOf="@id/tvPerfilTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvPerfilTitulo"
        app:layout_constraintBottom_toTopOf="@+id/btnCerrarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Campo Usuario -->
            <TextView
                android:id="@+id/labelUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_hint"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:labelFor="@+id/etUsuario"/>
            <TextView
                android:id="@+id/tvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp"
                tools:text="@string/name_user_text"/>
            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#CCCCCC"
                android:visibility="gone"
                tools:visibility="visible"
                android:hint="@string/name_user_text"
                android:inputType="textPersonName"
                android:autofillHints="username"
                android:layout_marginBottom="8dp"
                tools:ignore="LabelFor" />


            <!-- Campo Nombre Completo -->
            <TextView
                android:id="@+id/labelNombreCompleto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_person_hint"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:labelFor="@+id/etNombre"/>
            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp"
                tools:text="@string/name_person_text"/>
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#CCCCCC"
                android:visibility="gone"
                tools:visibility="visible"
                android:hint="@string/name_person_hint"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:layout_marginBottom="8dp"
                tools:ignore="LabelFor" />


            <!-- Email -->
            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_hint"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:labelFor="@+id/etEmail"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp"
                tools:text="@string/example_email"/>
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#CCCCCC"
                android:visibility="gone"
                tools:visibility="visible"
                android:hint="@string/mail_hint"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:layout_marginBottom="8dp"
                tools:ignore="LabelFor" />

            <!-- Fecha de Nacimiento -->
            <TextView
                android:id="@+id/labelFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_hint"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:labelFor="@+id/etFechaNacimiento"/>
            <TextView
                android:id="@+id/tvFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp"
                tools:text="@string/example_date"/>
            <EditText
                android:id="@+id/etFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#CCCCCC"
                android:visibility="gone"
                tools:visibility="visible"
                android:hint="@string/example_date"
                android:inputType="date"
                android:autofillHints="birthDateFull"
                android:layout_marginBottom="8dp"
                tools:ignore="LabelFor" />


            <!-- Género -->
            <TextView
                android:id="@+id/labelGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_hint"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:labelFor="@+id/etGenero"/>
            <TextView
                android:id="@+id/tvGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp"
                tools:text="@string/gender_hint"/>
            <EditText
                android:id="@+id/etGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#CCCCCC"
                android:visibility="gone"
                tools:visibility="visible"
                android:hint="@string/gender_hint"
                android:inputType="textCapWords"
                android:autofillHints="gender"
                android:layout_marginBottom="8dp"
                tools:ignore="LabelFor" />

        </LinearLayout>
    </ScrollView>

    <!-- BOTÓN CERRAR SESIÓN (VISIBLE EN MODO LECTURA) -->
    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/close_session_text"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/llBotonesEdicion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible" />


    <LinearLayout
        android:id="@+id/llBotonesEdicion"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/btnCancelarCambios"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_text"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnGuardarCambios"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button_text"
            android:layout_marginStart="8dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnBorrarPerfil"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_button_text"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"/>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBarPerfil"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/scrollView"
        app:layout_constraintBottom_toBottomOf="@id/scrollView"
        app:layout_constraintStart_toStartOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="@id/scrollView"
        tools:visibility="visible"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>